--- a/notes/makefile_notes.txt
+++ b/notes/makefile_notes.txt
@@ -100,7 +100,7 @@ makefile:
 条件赋值 ( ?= ) 如果变量未定义，则使用符号中的值定义变量。如果该变量已经赋值，则该赋值语句无效。
 追加赋值 ( += ) 原变量用空格隔开的方式追加一个新值。
 ------------------------------------------------------------------------------------------
-那makefile中“=”和“:=”的区别到底有什么区别？因为都是给变量赋值。从下面例子的执行结果来看，对于“=”符合make会将整个makefile展开后，再决定变量的值。也就是说，变量的值将会是整个makefile中最后被指定的值。在下例中，y的值将会是 xyz android ，而不是 fuck android ；但是对于“:=”符合，表示变量的值决定于它在makefile中的位置，而不是整个makefile展开后的最终值，所以h的值是fuck linux。
+那makefile中“=”和“:=”的区别到底有什么区别？因为都是给变量赋值。从下面例子的执行结果来看，对于“=”符合make会将整个makefile展开后，再决定变量的值。也就是说，变量的值将会是整个makefile中最后被指定的值。在下例中，y的值将会是 xyz android ，而不是 fuck android ；但是对于“:=”符合，表示变量的值决定于它在makefile中的位置，而不是整个makefile展开后的最终值，所以h的值是fuck linux。本质是运算优先级的问题，先计算=右侧的表达式和对:=左侧的值赋值，之后再对=左侧的值赋值。
 x = fuck
 y = $(x) android   #"xyz android"
 x = xyz
