--- a/notes/makefile_notes.txt
+++ b/notes/makefile_notes.txt
@@ -577,6 +577,62 @@ warning: jobserver unavailable: using -j1. Add '+' to parent make rule.
 为了现实 make 进程之间的通信，上层 make 进程将传递信息给子 make 进程。在传递信息过程中可能存在这种情况，子 make 进程不是一个实际的 make 进程，而上层make却不能确定子进程是否是真实的 make 进程。它只是将所有信息传递下去。上层 make 采用正常的算法来决定这些。当出现这种情况，子进程只会接受父进程传递的部分有用的信息。子进程会产生该警告信息，之后按照其内建的顺序方式进行处理。
 ******************************************************************************************
 ******************************************************************************************
+gcc  （早期是gnu c compiler，现在可以编译多种源代码文件）
+现在可以编译c、c++、java...
+优点：跨平台
+软件平台支持：windows linux Android
+硬件平台支持：arm x86 sh4 mips...
+
+gcc hello.c--->默认生成a.out
+gcc hello.c -o hello--->生成hello   -o 指定生成的文件名
+------------------------------------------------------------------------------------------
+gcc编译过程
+
+1.预处理（将c代码 变成.i文件）
+gcc -E main.cpp -o main.i
+1)头文件copy到源文件中
+2)将注释删掉
+3)将宏定义用宏值替换宏名，不对语法进行检查
+如果include两个相同的头文件且没有其他处理，则会包含两份头文件，所以需要用#ifdef处理
+
+2.编译（将c代码 变成.s文件）
+gcc -S main.c   -o main.s
+
+3.汇编（将汇编代码变成目标文件）
+gcc -c main.c   -o main.o 
+gcc -c main.s   -o main.o 
+
+4.链接（将多个.o文件链接在一起生成一个最终可执行文件）
+gcc    main.o   -o  main
+
+-Wall  显示所有警告（建议加）
+-w      忽略所有警告（建议不加，但是当有大量警告且只关注error的时候可以加此项以快速寻找error）
+------------------------------------------------------------------------------------------
+gcc优化
+Linux自动是打开gcc优化的
+可以使用time ./main 来看main执行的时间
+real	0m0.000s
+user	0m0.000s
+sys	0m0.000s
+real是实际执行的时间，user用户程序时间，sys系统函数时间
+linux是非实时系统，所以由于系统调度的原因time出来的时间并不是特别准
+
+数越大优化级别越高，linux程序员一般是使用-O2，-O2会对程序在时间效率和空间效率上进行优化
+gcc -O1 main.c -o maino1  //-O1 1级优化
+gcc -O2 main.c -o maino2  //-O2 2级优化
+gcc -O3 main.c -o maino3  //-O3 3级优化
+******************************************************************************************
+******************************************************************************************
+Makefile
+------------------------------------------------------------------------------------------
+提高编译速度
+将每个.c编译成.o然后用.o去生成可执行文件
+------------------------------------------------------------------------------------------
+变量推荐
+OBJS:=...
+EXEC:=...
+CC:=gcc
+CFLAG:= -Wall
 ******************************************************************************************
 ******************************************************************************************
 ******************************************************************************************
